<resources>
    <string name="app_name">Login</string>
    <string name="hello">Hello my friend</string>
    <string name="text">Dang nhap thu di hehe </string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="create_account"> \ Create Account</string>
    <string name="login">Log In</string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy">Privacy Policy</string>
</resources>