<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="304dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ellipse"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:text="@string/hello"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <EditText
            android:id="@+id/edtEmailSU"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="172dp"
            android:background="@drawable/vien_vang"
            android:hint="Email"
            android:paddingHorizontal="14dp"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtAdrSU"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/vien_vang"
            android:hint="Address"
            android:paddingHorizontal="14dp"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtEmailSU" />

        <EditText
            android:id="@+id/edtPwSU"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/vien_vang"
            android:hint="Password"
            android:paddingHorizontal="14dp"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtAdrSU" />

        <EditText
            android:id="@+id/edtCfPwSU"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/vien_vang"
            android:hint="Confirm Password"
            android:paddingHorizontal="14dp"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPwSU" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtCfPwSU">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="By signin up you agree to our"
                    android:textColor="@color/black" />

                <Button
                    android:layout_width="140dp"
                    android:layout_height="20dp"
                    android:background="#00FFFFFF"
                    android:text="@string/terms"
                    android:textAllCaps="false"
                    android:textColor="#FFB537" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="and"
                    android:textColor="@color/black" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:background="#00FFFFFF"
                    android:text="@string/privacy"
                    android:textAllCaps="false"
                    android:textColor="#FFB537" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnSU2"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_gradientcl"
            android:text="Sign Up"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/content" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSU2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/line_left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:text="OR"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/line_right" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/google_logo" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="30dp"
                    android:src="@drawable/logos_facebook" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/apple_logo" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tvAhaa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Alrealy have an Account?"
                    android:textColor="@color/black"
                    tools:layout_editor_absoluteX="91dp"
                    tools:layout_editor_absoluteY="558dp" />

                <Button
                    android:id="@+id/btnSI2"
                    android:layout_width="54dp"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="#FFB537"
                    tools:layout_editor_absoluteX="233dp"
                    tools:layout_editor_absoluteY="544dp" />

            </LinearLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>